--- a/index.html
+++ b/index.html
@@ -9,13 +9,22 @@ and open the template in the editor.
         <title>Animated Bar Chart</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style type="text/css" src="css/bullet.css"></style>
+        <link href="css/bullet.css" rel="stylesheet">
+        <link href="css/parset.css" rel="stylesheet">
     </head>
     <body>
-        <script src="https://d3js.org/d3.v6.min.js"></script>
-        <div><button id="updateButton">Update Values</button></div>
-        <div id="chart"></div>
-        <script src="scripts/barChart.js"></script>
+        <script src="includes/d3.js"></script>
+        <script src="includes/d3-parset.js"></script>
+
+        <div id="vis"></div>
+
+
+<!--        <script src="scripts/barChart.js"></script>-->
         <script src="scripts/process.js"></script>
-        <script src="scripts/tools.js"></script>
+        <script src="includes/tools.js"></script>
+        <script src="includes/bullet.js"></script>
+        <script src="scripts/draw.js"></script>
+
     </body>
 </html>
