--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ and open the template in the editor.
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <style type="text/css" src="css/bullet.css"></style>
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-        <link href="css/bullet.css" rel="stylesheet">
         <link href="css/parset.css" rel="stylesheet">
+        <link href="css/facet.css">
     </head>
     <body onload="onLoad()">
         <script src="includes/d3.js"></script>
         <script src="includes/d3-parset.js"></script>
-<div class="container">
+
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <a class="navbar-brand" style="color: #dddddd">Mission Control Bar</a>
 
@@ -29,16 +29,24 @@ and open the template in the editor.
 
             <button class="btn btn-secondary" type="button" id="load_wasabi">Load Wasabi Data</button>
             <button class="btn btn-warning" id="process_data" type="button">Process Data</button>
-            <button class="btn btn-success" id="draw_graph" type="button">Draw</button>
+            <button class="btn btn-success deselectstartover" id="draw_graph" type="button">Clear filters</button>
+
 
         </nav>
+        <div class="container">
+            <div style="height: 300px; overflow: scroll">
+        <div id=facets class="facetrow row"></div>
+            </div>
          <div class="row">
             <div id="vis"></div>
         </div>
 </div>
 <!--        <script src="scripts/barChart.js"></script>-->
+        <script src="https://cdn.jsdelivr.net/npm/underscore@1.12.0/underscore-min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+        <script src="scripts/facetsearch.js"></script>
+        <script src="scripts/config_facet.js"></script>
         <script src="scripts/process.js"></script>
         <script src="includes/tools.js"></script>
         <script src="includes/bullet.js"></script>
