ajout des fichiers pour le radarChart - insa

--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@ and open the template in the editor.
 
 
         </nav>
-        <div class="container">
-            <div style="height: 300px; overflow: scroll">
+    <div class="container">
+        <div style="height: 300px; overflow: scroll">
         <div id=facets class="facetrow row"></div>
             </div>
          <div class="row">
             <div id="vis"></div>
         </div>
-</div>
+        <div id="chart" style="height: 600px;"></div>
+    </div>
 <!--        <script src="scripts/barChart.js"></script>-->
         <script src="https://cdn.jsdelivr.net/npm/underscore@1.12.0/underscore-min.js"></script>
         <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
@@ -52,5 +53,8 @@ and open the template in the editor.
         <script src="includes/bullet.js"></script>
         <script src="scripts/interface.js"></script>
         <script src="scripts/genre.js"></script>
+        <script type="text/javascript" src="https://cdn.fusioncharts.com/fusioncharts/latest/fusioncharts.js"></script>
+        <script src="https://d3js.org/d3.v6.min.js"></script>
+        <script src="scripts/radarChart.js"></script>
     </body>
 </html>
